# wdmview

./: Cargo.toml
src/: app_state.rs  camera.rs  lib.rs  main.rs  models.rs  ui_events.rs
src/scene/: connection.rs  defrag_event.rs  element.rs  link.rs  mod.rs  network.rs  node.rs  service.rs  text_label.rs
src/shaders/: circles.wgsl  highlight_lines.wgsl  lines.wgsl
