[package]
name = "wdmview"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.24", features = [
    "extern_crate_alloc",
    "min_const_generics",
] }
cfg-if = "1.0"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
instant = "0.1"
flume = "0.11"
glam = "0.30"

winit = "0.30"
wgpu = { version = "27" }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
fern = "0.7"
reqwest = { version = "0.11" }
js-sys = { version = "0.3.78", default-features = false }
wasm-bindgen = "=0.2.101"
wasm-bindgen-futures = "0.4.51"
web-sys = { version = "0.3.78", features = ["Document", "Window", "Element", "Location"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2"
